デザイン変更修正スタイル調整

--- a/src/views/common/_contact.ejs
+++ b/src/views/common/_contact.ejs
@@ -6,7 +6,7 @@
                 医療における新たな価値創出やコラボレーションについて、
                 <br>ご提案が可能です。お気軽にご相談ください。
             </p>
-            <a href="#" class="contact-bg-icn c-link">
+            <a href="https://example.com" class="contact-bg-icn c-link">
                 <div class="c-link-icn"></div>
             </a>
         </div>
