--- a/src/views/common/_footer.ejs
+++ b/src/views/common/_footer.ejs
@@ -7,15 +7,14 @@
     <div class="footer-nav c-inter">
       <nav>
         <ul>
-          <li><a href="#">Who we are</a></li>
-          <li><a href="#">Our services</a></li>
-          <li><a href="#">Recruit</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html">Who we are</a></li>
+          <li><a href="http://example.com">Recruit</a></li>
+          <li><a href="http://example.com">News</a></li>
+          <li><a href="http://example.com">Contact</a></li>
           <li class="_pc">|</li>
-          <a href="#" class="_pc"><img class="footer-nav-facebook"
+          <a href="http://example.com" class="_pc"><img class="footer-nav-facebook"
               src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/facebook.svg" alt="faceBook"></a>
-          <a href="#" class="_pc"><img class="footer-nav-x"
+          <a href="http://example.com" class="_pc"><img class="footer-nav-x"
               src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/common/x.svg" alt="X"></a>
         </ul>
       </nav>
