--- a/src/views/common/_header.ejs
+++ b/src/views/common/_header.ejs
@@ -4,7 +4,7 @@
       <div class="header-info-icn"><span></span></div>
       <div class="header-info-txt">
         <p>大切なお知らせ</p>
-        <p class="header-info-txt-sub"><a href="#">サーバーメンテナンスについて</a></p>
+        <p class="header-info-txt-sub"><a href="https://example.com">サーバーメンテナンスについて</a></p>
       </div>
     </div>
   </div>
@@ -15,9 +15,9 @@
       <nav class="header-nav-menu c-inter _pc">
         <ul>
           <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html">Who we are</a></li>
-          <li><a href="#">Recruit</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#" class="_is-contact">Contact</a></li>
+          <li><a href="https://example.com">Recruit</a></li>
+          <li><a href="https://example.com">News</a></li>
+          <li><a href="https://example.com" class="_is-contact">Contact</a></li>
           <li><span>|</span></li>
           <li class="header-nav-lang">
             <select id="header-nav-select" class="js-lang-select">
@@ -48,9 +48,9 @@
     </div>
     <ul>
       <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html">Who We Are</a></li>
-      <li><a href="#">Recruit</a></li>
-      <li><a href="#">News</a></li>
-      <li><a class="menu-contact" href="#">Contact</a></li>
+      <li><a href="https://example.com">Recruit</a></li>
+      <li><a href="https://example.com">News</a></li>
+      <li><a class="menu-contact" href="https://example.com">Contact</a></li>
       <li class="menu-select">
         <select id="header-nav-select_sp" class="js-lang-select">
           <option value="jp">
