--- a/src/views/en/index.ejs
+++ b/src/views/en/index.ejs
@@ -100,12 +100,13 @@
                                 <p class="top-features-news-wrapperTitle js-fadein">Features</p>
                                 <div class="top-features-news-wrapperText js-fadein">
                                     <p>2025 .12.28</p>
-                                    <a href="#">新規導入薬を最初に処方する医師（アーリーアダプター）の特定を可能にするInsighTCROSS®
+                                    <a href="https://example.com">新規導入薬を最初に処方する医師（アーリーアダプター）の特定を可能にするInsighTCROSS®
                                         EarlyScriptersを発表します</a>
                                 </div>
                                 <div class="top-features-news-wrapperText js-fadein">
                                     <p>2025 .12.28</p>
-                                    <a href="#">希少疾患領域においてInsighTCROSS®のトライアルでデータドリブンな新しい営業戦略の可能性を実証しました</a>
+                                    <a
+                                        href="https://example.com">希少疾患領域においてInsighTCROSS®のトライアルでデータドリブンな新しい営業戦略の可能性を実証しました</a>
                                 </div>
                             </div>
                         </div>
@@ -224,7 +225,7 @@
                                     循環器医療に持続的な価値を創出していく仲間を求めています。</p>
                             </div>
                             <div class="recruit-link">
-                                <a href="#" class="c-link-long c-inter">
+                                <a href="https://example.com" class="c-link-long c-inter">
                                     <p>Recruit</p>
                                 </a>
                             </div>
@@ -239,20 +240,20 @@
                             <p class="news-wrapper-title js-fadein">News</p>
                             <div class="news-wrapper-text js-fadein">
                                 <p>2025 .12.25</p>
-                                <a href="#">MEDICA 2025にてInsighTCROSS®およびデータサイエンス事業について展示いたします</a>
+                                <a href="https://example.com">MEDICA 2025にてInsighTCROSS®およびデータサイエンス事業について展示いたします</a>
                             </div>
                             <div class="news-wrapper-text js-fadein">
                                 <p>2025 .11.16</p>
-                                <a href="#">InsighTCROSS®が、ものづくり補助金〈グローバル展開型〉に採択されました</a>
+                                <a href="https://example.com">InsighTCROSS®が、ものづくり補助金〈グローバル展開型〉に採択されました</a>
                             </div>
                             <div class="news-wrapper-text js-fadein">
                                 <p>2025 .10.01</p>
-                                <a href="#">
+                                <a href="https://example.com">
                                     あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、郊外のぎらぎら<br />ひかる草の波。あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、うつくしい森で飾られたモリーオ市、<br />郊外のぎらぎらひかる草の波。
                                 </a>
                             </div>
                             <div class="news-wrapper-link js-fadein">
-                                <a href="#" class="c-link-long c-inter" target="_blank">
+                                <a href="https://example.com" class="c-link-long c-inter" target="_blank">
                                     <p>News 一覧</p>
                                 </a>
                             </div>
