--- a/src/views/jp/news-detail.ejs
+++ b/src/views/jp/news-detail.ejs
@@ -12,7 +12,7 @@
                     <ul class="c-breadcrumbs c-wrapper">
                         <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html">Top</a></li>
                         <li class="c-breadcrumbs-arrow">▶︎</li>
-                        <li><a href="#">News</a></li>
+                        <li><a href="https://example.com">News</a></li>
                         <li class="c-breadcrumbs-arrow">▶︎</li>
                         <li>HIMSS 2026にて当社代表の講演が決定</li>
                     </ul>
@@ -59,7 +59,7 @@
                             </p>
                         </div>
                         <div class="news-bottom-bg-link js-fadein">
-                            <a href="#" class="news-bottom-bg-link-button c-inter">
+                            <a href="https://example.com" class="news-bottom-bg-link-button c-inter">
                                 <span>News一覧へ</span>
                             </a>
                         </div>
