--- a/src/views/jp/services/event.ejs
+++ b/src/views/jp/services/event.ejs
@@ -187,7 +187,7 @@
                                 <h3 class="js-fadein">テクロスは、要望対応にとどまらず、<br class="_br-pc" />医療の潮流を読み取り、<br
                                         class="_br-sp" />確かな知見から新たな企画を生み出すパートナーです。</h3>
                                 <span class="js-fadein"></span>
-                                <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html"
+                                <a href="https://example.com"
                                     class="c-link-long c-inter js-fadein">
                                     <p>ご相談はこちら</p>
                                 </a>
