--- a/src/views/jp/services/clinical.ejs
+++ b/src/views/jp/services/clinical.ejs
@@ -250,7 +250,7 @@
                                             多摩大学医療・介護ソリューション研究所、日本科学技術ジャーナリスト会議、及び、International Science Writers
                                             Association (ISWA) 正会員、日本医療マネジメント学会所属
                                         </p>
-                                        <a href="#">プロフィール詳細<span class="c-link-short-arrow"></span></a>
+                                        <a href="https://example.com">プロフィール詳細<span class="c-link-short-arrow"></span></a>
                                     </div>
                                 </li>
                                 <li class="js-fadein">
@@ -265,7 +265,7 @@
                                             NEWSでwebコンテンツの企画とMedical advisorを兼任。
                                             循環器専門医、東京大学医学部卒業(MD)、 東京大学大学院医学系研究科博士課程修了(Ph.D.)。
                                         </p>
-                                        <a href="#">プロフィール詳細<span class="c-link-short-arrow"></span></a>
+                                        <a href="https://example.com">プロフィール詳細<span class="c-link-short-arrow"></span></a>
                                     </div>
                                 </li>
                                 <li class="js-fadein">
@@ -280,7 +280,7 @@
                                             2021年株式会社テクロスへ入社し、Clinical Study & Strategic Consulting 事業の立ち上げメンバーとなる。
                                             臨床研究の実務経験3年以上。創薬科学修士。Googleデータアナリティクスプロフェッショナル認定保有。統計検定準1級。
                                         </p>
-                                        <a href="#">プロフィール詳細<span class="c-link-short-arrow"></span></a>
+                                        <a href="https://example.com">プロフィール詳細<span class="c-link-short-arrow"></span></a>
                                     </div>
                                 </li>
                             </ul>
@@ -292,7 +292,7 @@
                             <div class="c-service-contact-item">
                                 <h3 class="js-fadein">一緒に臨床研究をはじめませんか？<br class="_br-pc">ぜひお気軽にお問い合わせください。</h3><span
                                     class="js-fadein"></span>
-                                <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>about.html"
+                                <a href="https://example.com"
                                     class="c-link-long c-inter js-fadein">
                                     <p>お問い合わせ・ご相談はこちら</p>
                                 </a>
