--- a/src/views/en/index.ejs
+++ b/src/views/en/index.ejs
@@ -119,9 +119,9 @@
                             </h2>
                             <div class="our-services-wrapper-pickup">
                                 <div class="our-services-wrapper-pickupContent js-fadein">
-                                    <a href="https://insightcross.com/" target="_blank">
+                                    <a href="https://insightcross.com/">
                                         <div class="our-services-wrapper-pickupContentText">
-                                            <a href="https://insightcross.com/" target="_blank">
+                                            <a href="https://insightcross.com/">
                                                 <h3>データサイエンス事</h3>
                                                 <p>データサイエンスを用いて医薬品・医療機器企業に効率的なマーケティング活動を支援します。
                                                     テクロスが開発した意思決定支援サービス「InsighTCROSS®」は、効率的な営業・マーケティングを実践するための意思決定支援ソフトウェアです。
@@ -133,7 +133,7 @@
                                             </a>
                                         </div>
                                         <div>
-                                            <a href="https://insightcross.com/" target="_blank">
+                                            <a href="https://insightcross.com/">
                                                 <img src="../../<%= ASSET_PATH %>asset/img/top/data-science.jpg"
                                                     alt="データサイエンス事業">
                                             </a>
@@ -175,8 +175,7 @@
                                             class="c-link-short-arrow"></span></p>
                                 </a>
 
-                                <a href="https://www.tcross.co.jp/" class="our-services-wrapper-list-busines js-fadein"
-                                    target="_blank">
+                                <a href="https://www.tcross.co.jp/" class="our-services-wrapper-list-busines js-fadein">
                                     <div>
                                         <img src="../../<%= ASSET_PATH %>asset/img/top/our-services5.jpg"
                                             alt="メディアコミュニケーション事業">
@@ -253,7 +252,7 @@
                                 </a>
                             </div>
                             <div class="news-wrapper-link js-fadein">
-                                <a href="https://example.com" class="c-link-long c-inter" target="_blank">
+                                <a href="https://example.com" class="c-link-long c-inter">
                                     <p>News 一覧</p>
                                 </a>
                             </div>
