エラーページ、お知らせ記事ページボタン修正

--- a/src/views/jp/index.ejs
+++ b/src/views/jp/index.ejs
@@ -105,7 +105,7 @@
                   <a href="https://insightcross.com/">
                     <div class="our-services-wrapper-pickupContentText">
                       <a href="https://insightcross.com/">
-                        <h3>データサイエンス事</h3>
+                        <h3>データサイエンス事業</h3>
                         <p>データサイエンスを用いて医薬品・医療機器企業に効率的なマーケティング活動を支援します。
                           テクロスが開発した意思決定支援サービス「InsighTCROSS®」は、効率的な営業・マーケティングを実践するための意思決定支援ソフトウェアです。</p>
                         <p class="our-services-wrapper-pickupContentMore c-case-list-more _pc">もっと見る</p>
